# make-film-cover

./: Cargo.toml  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
doc/: Design.md
make_film_cover/: __main__.py
mfc/: __main__.py  consts.py  core.py  jobs.py
src/: cli.rs  consts.rs  fs.rs  img.rs  main.rs  utils.rs
