[package]
name = "make-film-cover"
version = "0.4.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mfc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
image = "0.25.1"

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"
