[package]
name = "make-film-cover"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mfc"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
image = "0.25.1"
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }

[profile.release]
lto = true
opt-level = "s"
strip = true
panic = "abort"
